# fastapi-extviews

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/example_Crud_app/: main.py
examples/example_async_db_app/: main.py
examples/example_basic/: main.py
examples/example_bigger_app/: main.py
examples/example_bigger_app/api/: user.py
examples/example_bigger_app/db/: user.py
examples/example_bigger_app/depends/: depends.py
examples/example_bigger_app/models/: user.py
examples/example_paginate_dependency/: main.py
extviews/: __init__.py  connections.py  crudset.py  depends.py  exceptions.py  viewset.py
test/: test_main.py  test_viewset.py
