[tool.poetry]
name = "fastapi-extviews"
version = "0.1.1"
description = "extviews is a fastapi library for creating RESTful APIs with a single class."
readme = "README.md"
homepage = "https://github.com/BilalAlpaslan/fastapi-extviews"
authors = ["Bilal Alpaslan <m.bilal.alpaslan@gmail.com>"]
license = "LICENSE"
packages = [{include = "extviews/*"}]

[tool.poetry.dependencies]
python = ">=3.7"
fastapi = ">=0.73"
pymongo = ">=3.11"
motor = ">=2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"